Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116757

QMessageBox does not show hyperlinks on macOS

    XMLWordPrintable

Details

    • macOS
    • 28ab45182 (dev), 1d8062640 (6.6), d5388a6fd (tqtc/lts-6.5)

    Description

      QMessageBox does not show hyperlinks or any rich-text content with Qt 6.5.2 on macOS. This is a regression bug because it worked a few versions before.

      #include <QApplication>
      #include <QMessageBox>
      
      int main(int argc, char *argv[])
      {
          QApplication a(argc, argv);
          QMessageBox msg;
          msg.setText("A link: <a href='https://www.google.com'>www.google.com</a>");
          msg.show();
          return a.exec();
      }
      

      Qt 5.15.2 (with hyperlink):

      Qt 6.5.2 (no hyperlink):

      Attachments

        1. image-2023-09-05-13-00-41-301.png
          41 kB
          Vladimir Kraus
        2. image-2023-09-05-12-59-55-570.png
          21 kB
          Vladimir Kraus
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            vladimir.kraus Vladimir Kraus
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes